--- a/login.html
+++ b/login.html
@@ -2,19 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>To-Do List | Register & Login</title>
+    <link rel="stylesheet" href="auth.css" />
   </head>
   <body>
-    <h2>Login</h2>
-    <form id="loginForm">
-      <label for="username">Username:</label><br />
-      <input type="text" id="username" name="username" /><br />
-      <label for="password">Password:</label><br />
-      <input type="password" id="password" name="password" /><br /><br />
-      <button type="submit">Login</button>
-    </form>
-    <p id="message"></p>
-    <script src="auth.js" type="module"></script>
+    <div class="main">
+      <input type="checkbox" id="chk" aria-hidden="true" />
+
+      <div class="signup">
+        <form id="signupForm">
+          <label for="chk" aria-hidden="true">Sign up</label>
+          <input
+            id="nama"
+            type="text"
+            name="nama"
+            placeholder="Nama Lengkap"
+            required />
+          <input
+            id="username"
+            type="text"
+            name="username"
+            placeholder="Username"
+            required />
+          <input
+            id="password"
+            type="password"
+            name="password"
+            placeholder="Password"
+            required />
+          <input
+            id="email"
+            type="email"
+            name="email"
+            placeholder="Email"
+            required />
+          <button type="submit">Sign up</button>
+        </form>
+      </div>
+
+      <div class="login">
+        <form id="loginForm">
+          <label for="chk" aria-hidden="true">Login</label>
+          <input
+            id="username"
+            type="username"
+            name="username"
+            placeholder="Username"
+            required />
+          <input
+            id="password"
+            type="password"
+            name="password"
+            placeholder="Password"
+            required />
+          <button type="submit">Login</button>
+        </form>
+      </div>
+    </div>
   </body>
+  <script src="auth.js" type="module"></script>
 </html>
