fix(script): Perbaiki error karena input updateTaskId tidak ada
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
           <span class="close">&times;</span>
           <h2>Update Task</h2>
           <form id="updateTaskForm">
+            <label for="updateTaskId">ID Task:</label>
+            <input type="text" id="updateTaskId" name="updateTaskId" readonly />
             <label for="updateJudul">Judul:</label>
             <input type="text" id="updateJudul" name="updateJudul" />
             <label for="updateDeskripsi">Deskripsi:</label>
