fix(script): Gunakan Eventlistener untuk tombol refresh data
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="button-container">
         <h3>ToDo</h3>
         <h3>Date</h3>
-        <button onclick="fetchTodos()">Refresh</button>
+        <button id="refreshBtn">Refresh</button>
         <button type="button" id="logoutButton">Logout</button>
       </div>
       <table id="todoTable">
